--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,6 @@ body {
 a {
 	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777;
-	padding: 0px 15px;
 	text-decoration: none;
 }
 h1{
@@ -37,6 +36,7 @@ on the top of the page */
 #navigation {
 	float: right;
 	margin-right: 50px;
+	padding: 0px 15px;
 }
 
 #navigation ul li { display: inline; }
@@ -48,17 +48,19 @@ the page and connect with me */
 	color: #4aaaa5;
 	align-content: center;
 }
+.topLinks {
+	padding: 0px 15px;
+}
 
 /*Below is the main container for both the main
 content and the contact us sidebar */
 #mainContainer {
-	clear: both;
-	margin: 0 auto;  
-	height: 800px;
+	clear: both;  
+	width: auto;
+	height: 1000px;
 	border-top: 2px solid gray;
 	background-image: url("../images/pinkdust.png");
     background-repeat: repeat;
-    z-index: 0;
  
 }
 
@@ -66,14 +68,18 @@ content and the contact us sidebar */
 image to the left of the paragraph. */
 #imageFloat {
 	float: left;
+	padding-right: 5px;
 }
 
 /*controls and sizes the images 
 in the connect with me sidebar*/
 .connectImages {
+	padding: 0;
 	height: 70px;
 	width: 70px;
 }
+/*controls the images in the portfolio 
+section*/
 #galleryImages {
 	margin: 10px;
 	height: 200px;
@@ -95,7 +101,7 @@ holds the main content*/
 	width: 650px;
 	margin-left: 10px;
 	padding: 5px;
-	float:left;
+	float: left;
 	background-color: #fff;
 	border: 2px;
 }
@@ -108,10 +114,12 @@ holds the images to connect with*/
 	background-color: #fff;
     border: 2px;
 }
+/*the container that holds the images for social media*/
 #imageContainer{
 	margin: auto;
 	text-align: center;
 }
+/*controls the size of the message section in contact me*/
 #message {
 	width: 375px;
 	height: 200px;
@@ -134,6 +142,7 @@ on the portfolio page*/
     padding: 10px 0px;
     text-align: center;
 }
+/* Code for the footer */
 .footer{
 	clear: both;
 	background-color:#666;
